--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 }
 
 .top-img {
-  background-image: url(../素材/img01.jpg);
+  background-image: url(https://github.com/rm4158/rm4158.github.io/blob/main/img01.jpg?raw=true);
   background-size: cover;
   background-attachment: fixed;
 }
