--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,7 +30,7 @@ nav i {
 }
 
 .feature-area {
-  background-image: url(../素材/img02.jpg);
+  background-image: url(https://github.com/rm4158/rm4158.github.io/blob/main/img02.jpg?raw=true);
   background-attachment: fixed;
   padding: 250px 0;
   text-align: center;
